Fixing issue with close button not being visible in dark mode for modals.

--- a/OrangeRedDotNet.BlazorWebApp/wwwroot/css/app.css
+++ b/OrangeRedDotNet.BlazorWebApp/wwwroot/css/app.css
@@ -157,6 +157,10 @@ p, .p {
     border-color: black !important;
 }
 
+    .dark-modal .blazored-modal-header .blazored-modal-close {
+        color: rgb(248, 249, 250) !important;
+    }
+
 .horizontal-scroll-light {
     background-image: linear-gradient(to right, white, white), linear-gradient(to right, white, white), linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0)), linear-gradient(to left, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0));
     background-position: left center, right center, left center, right center;
